--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ExamPortalClient</title>
+  <title>Untitled</title>
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="public/favicon.ico" rel="icon" type="image/x-icon">
+  <link href="favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
 <app-root></app-root>
